Refactor: 진행중인 챌린지 api에 userId 파라미터 추가
