# src/docs/swagger/user.json
@@ -180,13 +180,20 @@
         }
       }
     },
-    "/api/v1/users/challenges/ongoing": {
+    "/api/v1/users/{userId}/challenges/ongoing": {
       "get": {
-        "summary": "내 챌린지 조회 API",
-        "description": "내가 참여한 챌린지들을 보여주는 API입니다.",
+        "summary": "진행중인 챌린지 조회 API",
+        "description": "유저가 참여한 챌린지들을 보여주는 API입니다.",
         "tags": ["User"],
-        "security": [{ "bearerAuth": [] }],
-        "parameters": [],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "required": true,
+            "schema": { "type": "string", "example": "1" },
+            "description": "사용자의 ID"
+          }
+        ],
         "responses": {
           "200": {
             "description": "내 챌린지 조회 성공",
